cmake_minimum_required(VERSION 4.0)
project(Week12_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Week12_lab2 main.cpp
        problem1.cpp
        problem2.cpp
        problem3.cpp
        problem4.cpp
        problem5.cpp
        problem6.cpp
        problem7.cpp
        problem8.cpp
        problem9.cpp
        problem10.cpp)
